feat: Fuar card tasarımı güncellendi ve CMS açıklama alanı eklendi
🎨 Fuar Card Tasarım Güncellemesi:
- Fuar adı altında açıklama alanı eklendi
- Font: Radio Canada Big, font-medium
- Renk: text-gray-600 (konum font boyutunda)
- Responsive ve temiz görünüm

📝 CMS Açıklama Alanları:
- Türkçe fuar açıklaması (description_tr)
- İngilizce fuar açıklaması (description_en)
- Text widget ile esnek içerik girişi
- Opsiyonel alan (required: false)

🔍 Debug Sonuçları:
- Logo ve arka plan görselleri CMS'ten başarıyla alınıyor ✅
- fair-logo-boot.jpg ve fair-bg-boot.png aktif
- Temsilci bilgileri cache sorunu devam ediyor
- Fallback sistem çalışıyor

✨ Görsel Entegrasyon:
- CMS'ten frontend'e görsel yansıması çalışıyor
- İdeal ölçü rehberleri eklendi
- Tam boyut görsel gösterimi aktif

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -42,6 +42,8 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📝 Fuar Açıklaması (Türkçe)", name: "description_tr", widget: "text", required: false, hint: "Fuar hakkında kısa açıklama"}
+                  - {label: "📝 Fuar Açıklaması (İngilizce)", name: "description_en", widget: "text", required: false, hint: "Brief description about the fair"}
                   - {label: "📅 Fuar Tarihi", name: "date", widget: "string", hint: "Fuar tarih aralığı (Örnek: 17-25 OCAK 2026, 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
@@ -114,6 +116,8 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📝 Fuar Açıklaması (Türkçe)", name: "description_tr", widget: "text", required: false, hint: "Fuar hakkında kısa açıklama"}
+                  - {label: "📝 Fuar Açıklaması (İngilizce)", name: "description_en", widget: "text", required: false, hint: "Brief description about the fair"}
                   - {label: "📅 Fuar Tarihi", name: "date", widget: "string", hint: "Fuar tarih aralığı (Örnek: 17-25 OCAK 2026, 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
@@ -186,6 +190,8 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📝 Fuar Açıklaması (Türkçe)", name: "description_tr", widget: "text", required: false, hint: "Fuar hakkında kısa açıklama"}
+                  - {label: "📝 Fuar Açıklaması (İngilizce)", name: "description_en", widget: "text", required: false, hint: "Brief description about the fair"}
                   - {label: "📅 Fuar Tarihi", name: "date", widget: "string", hint: "Fuar tarih aralığı (Örnek: 17-25 OCAK 2026, 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
@@ -258,6 +264,8 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📝 Fuar Açıklaması (Türkçe)", name: "description_tr", widget: "text", required: false, hint: "Fuar hakkında kısa açıklama"}
+                  - {label: "📝 Fuar Açıklaması (İngilizce)", name: "description_en", widget: "text", required: false, hint: "Brief description about the fair"}
                   - {label: "📅 Fuar Tarihi", name: "date", widget: "string", hint: "Fuar tarih aralığı (Örnek: 17-25 OCAK 2026, 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
@@ -330,6 +338,8 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
+                  - {label: "📝 Fuar Açıklaması (Türkçe)", name: "description_tr", widget: "text", required: false, hint: "Fuar hakkında kısa açıklama"}
+                  - {label: "📝 Fuar Açıklaması (İngilizce)", name: "description_en", widget: "text", required: false, hint: "Brief description about the fair"}
                   - {label: "📅 Fuar Tarihi", name: "date", widget: "string", hint: "Fuar tarih aralığı (Örnek: 17-25 OCAK 2026, 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
