Update 🎪 Fuarlar “fairs_2026”

--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -43,6 +43,7 @@ fairs:
       name: Arzu GÜNAL
       title: Satış Direktörü
       email: arzug@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -63,6 +64,7 @@ fairs:
       name: Seval ARSLAN
       title: Satış Direktörü
       email: seval@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -83,6 +85,7 @@ fairs:
       name: Seval ARSLAN
       title: Satış Direktörü
       email: seval@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -103,6 +106,7 @@ fairs:
       name: Seval ARSLAN
       title: Satış Direktörü
       email: seval@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -123,6 +127,7 @@ fairs:
       name: Pınar YALÇIN
       title: Satış Direktörü
       email: pinar@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -143,6 +148,7 @@ fairs:
       name: Ahmet Hilmi ÇORUK
       title: Satış Direktörü
       email: ahmethilmi@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -163,6 +169,7 @@ fairs:
       name: Neşe ŞENYURT
       title: Satış Yöneticisi
       email: nese@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -183,6 +190,7 @@ fairs:
       name: Ahmet Hilmi ÇORUK
       title: Satış Direktörü
       email: ahmethilmi@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -203,6 +211,7 @@ fairs:
       name: Pınar YALÇIN
       title: Satış Direktörü
       email: pinar@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -223,6 +232,7 @@ fairs:
       name: Pınar YALÇIN
       title: Satış Direktörü
       email: pinar@turkel.com.tr
+      phone: +90 216 123 45 68
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -243,3 +253,4 @@ fairs:
       name: Ahmet Hilmi ÇORUK
       title: Satış Direktörü
       email: ahmethilmi@turkel.com.tr
+      phone: +90 216 123 45 68
